force-app/main/default/objects/Link__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
  <fullName>Business_Unit__c</fullName>
  <label>Business Unit</label>
  <type>Lookup</type>
  <referenceTo>Business_Unit__c</referenceTo>
  <relationshipLabel>Links</relationshipLabel>
  <relationshipName>Links</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>