force-app/main/default/objects/Link__c/fields/Type__c.field-meta.xml
<CustomField>
  <fullName>Type__c</fullName>
  <label>Type</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <sorted>true</sorted>
      <value><fullName>Website</fullName><label>Website</label></value>
      <value><fullName>ShortLink</fullName><label>Short Link</label></value>
      <value><fullName>QR</fullName><label>QR</label></value>
      <value><fullName>Image</fullName><label>Image</label></value>
      <value><fullName>Badge</fullName><label>Badge</label></value>
      <value><fullName>Webhook</fullName><label>Webhook</label></value>
      <value><fullName>Other</fullName><label>Other</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>