force-app/main/default/objects/Link__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>Public link</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>